# src/server/routes/{userId}/{bookId}/extend/BorrowingExtendRoute.js
@@ -1,0 +1,8 @@
+import express from "express";
+import withAuth from "../../../../../framework/middlewares/withAuth.js";
+import extendBorrowing from "../../../../../services/borrowing/extendBorrowing.js";
+const router = express.Router({ mergeParams: true });
+
+router.put("/", withAuth({ role: "LIBRARIAN" }), extendBorrowing);
+
+export default router;
